Modified training script for AIRL

--- a/experiment3/plots.ipynb
+++ b/experiment3/plots.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-06-15T09:38:08.792508Z",
-     "start_time": "2024-06-15T09:37:39.667153Z"
+     "end_time": "2024-06-15T17:06:43.905380Z",
+     "start_time": "2024-06-15T17:06:14.416601Z"
     }
    },
    "source": [
@@ -27,33 +27,48 @@
    "execution_count": 1
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-15T17:06:43.920901Z",
+     "start_time": "2024-06-15T17:06:43.905380Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "def load_config(config_path, env_name):\n",
     "    with open(config_path, 'r') as file:\n",
     "        config = yaml.safe_load(file)\n",
     "    return config[env_name]"
    ],
-   "id": "9f1b1f30c5db1ce8"
+   "id": "9f1b1f30c5db1ce8",
+   "outputs": [],
+   "execution_count": 2
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-15T17:07:20.848721Z",
+     "start_time": "2024-06-15T17:07:20.817475Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
-    "config_path = \"experiment3/parameters.yaml\"\n",
+    "config_path = \"parameters.yaml\"\n",
     "env_name = \"cartpole\"  # or \"pendulum\"\n",
     "config_rlhf = load_config(config_path, env_name + \"RLHF\")\n",
     "config_airl = load_config(config_path, env_name + \"AIRL\")"
    ],
-   "id": "b03afdd3fa34adb8"
+   "id": "b03afdd3fa34adb8",
+   "outputs": [],
+   "execution_count": 4
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-15T17:08:07.571106Z",
+     "start_time": "2024-06-15T17:08:07.539493Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# Initialize environment\n",
@@ -63,11 +78,20 @@
     "elif env_name == \"pendulum\":\n",
     "    env = Environment(\"Pendulum-v1\", SEED, num_envs=4)\n",
     "    \n",
-    "env.init_vec_env()"
+    "env.init_vec_env()\n",
+    "print(env.env_id)"
    ],
    "id": "dffee0d2ba446207",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "seals:seals/CartPole-v0\n"
+     ]
+    }
+   ],
+   "execution_count": 8
   },
   {
    "metadata": {},
@@ -78,8 +102,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-15T09:38:08.922922Z",
-     "start_time": "2024-06-15T09:38:08.907280Z"
+     "end_time": "2024-06-15T17:08:10.225257Z",
+     "start_time": "2024-06-15T17:08:10.210125Z"
     }
    },
    "cell_type": "code",
@@ -95,13 +119,13 @@
    ],
    "id": "373ad432019d8ff1",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-15T09:38:08.938525Z",
-     "start_time": "2024-06-15T09:38:08.922922Z"
+     "end_time": "2024-06-15T17:08:12.220868Z",
+     "start_time": "2024-06-15T17:08:12.205238Z"
     }
    },
    "cell_type": "code",
@@ -118,13 +142,13 @@
    ],
    "id": "ee34b7d661c87f12",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-15T09:38:08.954150Z",
-     "start_time": "2024-06-15T09:38:08.938525Z"
+     "end_time": "2024-06-15T17:08:12.948944Z",
+     "start_time": "2024-06-15T17:08:12.932921Z"
     }
    },
    "cell_type": "code",
@@ -145,13 +169,13 @@
    ],
    "id": "425bfdb0a84a8496",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-15T09:38:08.969772Z",
-     "start_time": "2024-06-15T09:38:08.954150Z"
+     "end_time": "2024-06-15T17:08:14.138249Z",
+     "start_time": "2024-06-15T17:08:14.106618Z"
     }
    },
    "cell_type": "code",
@@ -162,13 +186,13 @@
    ],
    "id": "c0ba932aa6bc8650",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-15T09:38:08.985398Z",
-     "start_time": "2024-06-15T09:38:08.969772Z"
+     "end_time": "2024-06-15T17:08:14.449151Z",
+     "start_time": "2024-06-15T17:08:14.433137Z"
     }
    },
    "cell_type": "code",
@@ -193,13 +217,13 @@
    ],
    "id": "e98e428e75e819b2",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-15T09:38:09.001018Z",
-     "start_time": "2024-06-15T09:38:08.985398Z"
+     "end_time": "2024-06-15T17:08:15.350472Z",
+     "start_time": "2024-06-15T17:08:15.338445Z"
     }
    },
    "cell_type": "code",
@@ -221,7 +245,7 @@
    ],
    "id": "21d3cd0b107948f6",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 14
   },
   {
    "metadata": {},
@@ -232,15 +256,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-15T09:38:09.569437Z",
-     "start_time": "2024-06-15T09:38:09.548197Z"
+     "end_time": "2024-06-15T17:09:48.989314Z",
+     "start_time": "2024-06-15T17:09:48.979312Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "def main_train_airl(expert_type, nr_demonstrations):\n",
+    "def main_train_airl(expert_type, nr_demonstrations, random_prob=0, switch_prob=0):\n",
     "    rewards_over_seeds = [] \n",
-    "    seed_list = [79]\n",
+    "    seed_list = [34, 43, 52, 61, 70]\n",
     "    \n",
     "    for i, seed in enumerate(seed_list): \n",
     "        # set seed\n",
@@ -253,15 +277,15 @@
     "        eval_policy_std = []\n",
     "        \n",
     "        # Train\n",
-    "        train_airl(expert_type=expert_type, nr_demonstrations=nr_demonstrations)\n",
+    "        train_airl(expert_type=expert_type, nr_demonstrations=nr_demonstrations, random_prob=random_prob, switch_prob=switch_prob)\n",
     "        \n",
     "        rws, mean, std = get_reward_stats(\"./airl_agent/learner_rewards.pt\")\n",
     "            \n",
     "        means.append(mean)\n",
     "        stds.append(std)\n",
     "                    \n",
-    "        eval_mean, eval_std = train_with_learned_reward_and_evaluate(\"airl_agent/reward_net.pt\", \"airl_agent/airl_agent_trained_with_learned_reward\",  \"./airl_cartpole_tensorboard\", f\"run_3_expert_with_{seed}\", \n",
-    "         wandb_project_name=\"airl\", wandb_save_path=f\"models/run_3_expert_with_{seed}\", \n",
+    "        eval_mean, eval_std = train_with_learned_reward_and_evaluate(\"airl_agent/reward_net.pt\", \"airl_agent/airl_agent_trained_with_learned_reward\",  \"./airl_cartpole_tensorboard\", f\"run_4_expert_with_{seed}\", \n",
+    "         wandb_project_name=\"airl\", wandb_save_path=f\"models/run_4_expert_with_{seed}\", \n",
     "         config=config_airl\n",
     "         )\n",
     "                \n",
@@ -275,12 +299,12 @@
    ],
    "id": "dc5a0590fd46a627",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 17
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "main_train_airl(\"optimal\", 60)",
+   "source": "main_train_airl(\"suboptimal\", 60, random_prob=0.25, switch_prob=0.2)",
    "id": "7d28b9f159d921ef",
    "outputs": [],
    "execution_count": null
